# packages/api-spec/openapi.yaml
@@ -1640,6 +1640,14 @@ components:
           type: string
           format: date-time
           nullable: true
+        scheduledStartAt:
+          type: string
+          format: date-time
+          nullable: true
+        scheduledEndAt:
+          type: string
+          format: date-time
+          nullable: true
 
     TaskCreate:
       type: object
@@ -1665,6 +1673,14 @@ components:
         completedAt:
           type: string
           format: date-time
+        scheduledStartAt:
+          type: string
+          format: date-time
+          nullable: true
+        scheduledEndAt:
+          type: string
+          format: date-time
+          nullable: true
 
     TaskUpdate:
       type: object
@@ -1688,6 +1704,14 @@ components:
           format: uuid
           nullable: true
         completedAt:
+          type: string
+          format: date-time
+          nullable: true
+        scheduledStartAt:
+          type: string
+          format: date-time
+          nullable: true
+        scheduledEndAt:
           type: string
           format: date-time
           nullable: true
